# llm_testkit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
configs/: audit_example.yaml  default.yaml  my_audit.yaml
configs/prompts/: confusing.yaml  illegal.yaml  questionable.yaml
docs/: audit-guide.md  configuration.md  environment-variables.md  supported-models.md  troubleshooting.md
src/llm_testkit/: main.py
src/llm_testkit/audit/: README.md  __init__.py  cli.py  config.py  runner.py
src/llm_testkit/audit/detectors/: __init__.py  arithmetic_json.py  base.py  perturbation.py  style_bias.py  tokenizer_fingerprint.py
src/llm_testkit/backend/: __init__.py  anthropic_api.py  openai_api.py
src/llm_testkit/core/: __init__.py  metrics.py  tokenizer.py
src/llm_testkit/utils/: __init__.py  config.py  io.py  logging.py
