[project]
name = "llm_testkit"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "openai>=2.6.0",
    "tenacity>=9.1.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.40.0",
]

[project.scripts]
llm-testkit = "llm_testkit.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel", "build"]
build-backend = "setuptools.build_meta"
